Bug 328591 - 'Send Mail' keyboard shortcut (CTRL+ENTER) should not be set by default or require confirmation
Summary: 'Send Mail' keyboard shortcut (CTRL+ENTER) should not be set by default or re...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: composer (other bugs)
Version First Reported In: 4.11.2
Platform: unspecified Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 18:38 UTC by fsfbugs
Modified: 2014-08-02 19:33 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.14
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description fsfbugs 2013-12-09 18:38:50 UTC
Being a bit clumsy, I have more than once prematurely sent out an email by accidentally pressing CTRL+ENTER whilst composing an email.

I believe this shortcut should not be set by default or require confirmation (as done in Mozilla Thunderbird) when used for the first time.

Reproducible: Always
Comment 1 Laurent Montel 2013-12-10 07:52:30 UTC
You can add option "ask confirmation before sending"
So for me it's not a bug.
Comment 2 fsfbugs 2013-12-10 16:49:11 UTC
No, it's not a bug. It's about default settings. KMail should by default try very hard to stop me sending out an email prematurely and it already does so for, e.g., attachments.

Now, I know that I can just deactivate the shortcut or activate 'Confirm before send' but this is about defaults. The problem with 'Confirm before send' is that it isn't activated by default (I think?), and that it applies equally to pressing the 'Send' button and CTRL-ENTER. Many users (including me) won't want 'Confirm before send' to be activated or deactivate it straight away because because they never accidentally press the 'Send' button.

Unlike the 'Send' button, the keyboard shortcut is not discoverable: the user will learn about either it by explicitly searching for it, or by accidentally pressing the key combination. In the latter case, it's already too late. I, for example, tend to forget that it exists when using a different computer/installation so don't even think about disabling the shortcut.
Comment 3 fsfbugs 2013-12-10 17:03:31 UTC
Here's a compromise: when 'Confirm before send' is not activated and the user has invoked the keyboard shortcut, show a dialogue that says something along the lines of

You have pressed the *Send Mail* keyboard shortcut *CTRL-ENTER*. Keyboard shortcuts can be changed via *Settings -> Configure Shortcuts...*.

[ ] Don't ask for confirmation again.

[Send Now] [Send Later] [Cancel]

With the above, all users should be happy: those who want 'Confirm before send' always are unaffected; those who don't want 'Confirm before send' will see the confirmation dialogue only once; those who what the keyboard shortcut get it by default; and those who deem it too dangerous are asked to confirm and are told how to change it.
Comment 4 Laurent Montel 2013-12-11 08:42:30 UTC
Ok it's a good compromise
Will implement it soon.
Comment 5 Laurent Montel 2014-08-02 19:33:08 UTC
Git commit 66e86458eda9537590575ededa523915c5a0eda0 by Montel Laurent.
Committed on 02/08/2014 at 19:32.
Pushed by mlaurent into branch 'KDE/4.14'.

Fix Bug 328591 - 'Send Mail' keyboard shortcut (CTRL+ENTER) should not be set by default or require confirmation

FIXED-IN: 4.14

A  +65   -0    kmail/editor/validatesendmailshortcut.cpp     [License: GPL (v2)]
A  +36   -0    kmail/editor/validatesendmailshortcut.h     [License: GPL (v2)]

http://commits.kde.org/kdepim/66e86458eda9537590575ededa523915c5a0eda0