Fix Bug 328591 - 'Send Mail' keyboard shortcut (CTRL+ENTER) should not be set by default or require confirmation

FIXED-IN: 4.14
BUG: 328591